# nucleus-analytics

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .npmignore  README.md  index.d.ts  index.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  utils.js
.github/workflows/: publish-to-npm.yml
examples/browser/: index.html
examples/electron/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
playground/: README.md
playground/tauri/: package.json
playground/tauri/src/: App.jsx  main.jsx
playground/tauri/src-tauri/: Cargo.toml  tauri.conf.json
playground/tauri/src-tauri/src/: main.rs
src/: config.ts  detectData.js  device.ts  index.d.ts  index.js  index.ts  logger.ts  storage.ts  store.ts  test.js  types.ts  utils.js  utils.ts
tauri/: Cargo.toml  README.md
tauri/src/: lib.rs
